simplify api code
